보안 강화 작업 중 25년 2월 5일